--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -66,7 +66,7 @@
 		{ path="Libraries/Internet.lua", id=1095 },
 		{ path="Libraries/BigLetters.lua", id=391 },
 		-- Scripts
-		{ path="OS.lua", id=106 },
+		{ path=".com.IMineOS.EFI/EFI/EFI.lua", id=106 },
 		-- System icons
 		"Icons/Application.pic",
 		"Icons/Archive.pic",
