--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -185,7 +185,7 @@
 		"Applications/Settings.app/Localizations/Japanese.lang",
 		"Applications/Settings.app/Localizations/Dutch.lang",
 		-- 3D Print
-		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = true },
+		{ path="Applications/3D Print.app/Main.lua", id=859, shortcut = false },
 		"Applications/3D Print.app/Icon.pic",
 		"Applications/3D Print.app/Sample.3dm",
 		"Applications/3D Print.app/Localizations/English.lang",
@@ -212,19 +212,19 @@
 		"Libraries/OpenComputersGL/Materials.lua",
 		"Libraries/Vector.lua",
 		-- Multiscreen
-		{ path="Applications/Multiscreen.app/Main.lua", id=1109, shortcut = true },
+		{ path="Applications/Multiscreen.app/Main.lua", id=1109, shortcut = false },
 		"Applications/Multiscreen.app/Icon.pic",
 		-- Shooting
-		{ path="Applications/Shooting.app/Main.lua", id=1107, shortcut = true },
+		{ path="Applications/Shooting.app/Main.lua", id=1107, shortcut = false },
 		"Applications/Shooting.app/Icon.pic",
 		-- Reinstall OS
-		{ path="Applications/Reinstall OS.app/Main.lua", id=1055, shortcut = true },
+		{ path="Applications/Reinstall OS.app/Main.lua", id=1055, shortcut = false },
 		"Applications/Reinstall OS.app/Icon.pic",
 		-- Lua interpreter
-		{ path="Applications/Lua.app/Main.lua", id=1077, shortcut = true },
+		{ path="Applications/Lua.app/Main.lua", id=1077, shortcut = false },
 		"Applications/Lua.app/Icon.pic",
 		-- Weather
-		{ path="Applications/Weather.app/Main.lua", id=240, shortcut = true },
+		{ path="Applications/Weather.app/Main.lua", id=240, shortcut = false },
 		"Applications/Weather.app/Icon.pic",
 		"Applications/Weather.app/Sunny.pic",
 		"Applications/Weather.app/Cloudy.pic",
@@ -233,31 +233,31 @@
 		"Applications/Weather.app/Snowy.pic",
 		"Applications/Weather.app/Stormy.pic",
 		-- Calculator
-		{ path="Applications/Calculator.app/Main.lua", id=1045, shortcut = true },
+		{ path="Applications/Calculator.app/Main.lua", id=1045, shortcut = false },
 		"Applications/Calculator.app/Icon.pic",
 		-- Graph
-		{ path="Applications/Graph.app/Main.lua", id=238, shortcut = true },
+		{ path="Applications/Graph.app/Main.lua", id=238, shortcut = false },
 		"Applications/Graph.app/Icon.pic",
 		-- HEX
-		{ path="Applications/HEX.app/Main.lua", id=248, shortcut = true },
+		{ path="Applications/HEX.app/Main.lua", id=248, shortcut = false },
 		"Applications/HEX.app/Icon.pic",
 		-- Running string
-		{ path="Applications/Running String.app/Main.lua", id=410, shortcut = true },
+		{ path="Applications/Running String.app/Main.lua", id=410, shortcut = false },
 		"Applications/Running String.app/Icon.pic",
 		-- Palette
-		{ path="Applications/Palette.app/Main.lua", id=250, shortcut = true },
+		{ path="Applications/Palette.app/Main.lua", id=250, shortcut = false },
 		"Applications/Palette.app/Icon.pic",
 		-- HoloClock
-		{ path="Applications/HoloClock.app/Main.lua", id=559, shortcut = true },
+		{ path="Applications/HoloClock.app/Main.lua", id=559, shortcut = false },
 		"Applications/HoloClock.app/Icon.pic",
 		-- Symbols
-		{ path="Applications/Symbols.app/Main.lua", id=853, shortcut = true },
+		{ path="Applications/Symbols.app/Main.lua", id=853, shortcut = false },
 		"Applications/Symbols.app/Icon.pic",
 		-- IRC
-		{ path="Applications/IRC.app/Main.lua", id=856, shortcut = true },
+		{ path="Applications/IRC.app/Main.lua", id=856, shortcut = false },
 		"Applications/IRC.app/Icon.pic",
 		-- Nanomachines
-		{ path="Applications/Nanomachines.app/Main.lua", id=938, shortcut = true },
+		{ path="Applications/Nanomachines.app/Main.lua", id=938, shortcut = false },
 		"Applications/Nanomachines.app/Icon.pic",
 		"Applications/Nanomachines.app/Localizations/Chinese.lang",
 		"Applications/Nanomachines.app/Localizations/English.lang",
@@ -267,7 +267,7 @@
 		"Applications/Nanomachines.app/Localizations/Ukrainian.lang",
 		"Applications/Nanomachines.app/Localizations/Dutch.lang",
 		-- VK
-		{ path="Applications/VK.app/Main.lua", id=952, shortcut = true },
+		{ path="Applications/VK.app/Main.lua", id=952, shortcut = false },
 		"Applications/VK.app/Icon.pic",
 		"Applications/VK.app/Localizations/English.lang",
 		"Applications/VK.app/Localizations/Spanish.lang",
@@ -281,7 +281,7 @@
 		"Applications/VK.app/Styles/Bright.lua",
 		"Applications/VK.app/Styles/Dark.lua",
 		-- Calendar
-		{ path="Applications/Calendar.app/Main.lua", shortcut = true },
+		{ path="Applications/Calendar.app/Main.lua", shortcut = false },
 		"Applications/Calendar.app/Icon.pic",
 		"Applications/Calendar.app/Icons/ArrowLeft.pic",
 		"Applications/Calendar.app/Icons/ArrowRight.pic",
