--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -191,7 +191,7 @@
 		{ path="Applications/Console.app/Main.lua", id=1607 },
 		"Applications/Console.app/Icon.pic"
 		-- Calculator
-		{ path="Applications/Calculator.app/Main.lua", id=1045, shortcut = false },
+		{ path="Applications/Calculator.app/Main.lua" },
 		"Applications/Calculator.app/Icon.pic",
 	},
 	optional = {
