--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -190,7 +190,9 @@
 		-- Console
 		{ path="Applications/Console.app/Main.lua", id=1607 },
 		"Applications/Console.app/Icon.pic"
-		
+		-- Calculator
+		{ path="Applications/Calculator.app/Main.lua" },
+		"Applications/Calculator.app/Icon.pic",
 	},
 	optional = {
 		{ path="Libraries/JSON.lua", id=103 },
