--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -66,7 +66,7 @@
 		{ path="Libraries/Internet.lua", id=1095 },
 		{ path="Libraries/BigLetters.lua", id=391 },
 		-- Scripts
-		{ path="OS.lua", id=106 },
+		{ path=".com.IMineOS.EFI/EFI/EFI.lua", id=106 },
 		-- System icons
 		"Icons/Application.pic",
 		"Icons/Archive.pic",
@@ -155,7 +155,7 @@
 		"Applications/Info of computer.app/Localizations/Russian.lang",
 		-- Info of computer
 		{ path="Applications/Info of computer.app/Main.lua", id=175 },
-		"Applications/Finder.app/Icon.pic",
+		"Applications/Info of computer.app/Icon.pic",
 		-- Settings
 		{ path="Applications/Settings.app/Main.lua", id=909 },
 		"Applications/Settings.app/Icon.pic",
@@ -179,6 +179,8 @@
 		"Applications/Settings.app/Modules/7_Time/Icon.pic",
 		"Applications/Settings.app/Modules/8_System/Main.lua",
 		"Applications/Settings.app/Modules/8_System/Icon.pic",
+		"Applications/Settings.app/Modules/9_Update/Main.lua",
+        "Applications/Settings.app/Modules/9_Update/Icon.pic",
 		"Applications/Settings.app/Localizations/Chinese.lang",
 		"Applications/Settings.app/Localizations/Russian.lang",
 		"Applications/Settings.app/Localizations/English.lang",
