--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -149,13 +149,13 @@
 		"Applications/Picture View.app/Extensions/.pic/Icon.pic",
 		"Applications/Picture View.app/Extensions/.pic/Context menu.lua",
 		-- Finder
-		{ path="Applications/Finder.app/Main.lua", id=175 },
+		{ path="Applications/Info of computer.app/Main.lua", id=175 },
 		"Applications/Info of computer.app/Icon.pic",
 		"Applications/Info of computer.app/Localizations/English.lang",
 		"Applications/Info of computer.app/Localizations/Russian.lang",
 		-- Info of computer
-		{ path="Applications/Info of computer.app/Main.lua", id=175 },
-		"Applications/Info of computer.app/Icon.pic",
+		{ path="Applications/Finder.app/Main.lua", id=175 },
+		"Applications/Finder.app/Icon.pic",
 		-- Settings
 		{ path="Applications/Settings.app/Main.lua", id=909 },
 		"Applications/Settings.app/Icon.pic",
