--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -148,12 +148,12 @@
 		"Applications/Picture View.app/Localizations/Russian.lang",
 		"Applications/Picture View.app/Extensions/.pic/Icon.pic",
 		"Applications/Picture View.app/Extensions/.pic/Context menu.lua",
+		-- Info
+		{ path="Applications/Info.app/Main.lua" },
+		"Applications/Info.app/Icon.pic",
+		"Applications/Info.app/Localizations/English.lang",
+		"Applications/Info.app/Localizations/Russian.lang",
 		-- Finder
-		{ path="Applications/Info of computer.app/Main.lua", id=175 },
-		"Applications/Info of computer.app/Icon.pic",
-		"Applications/Info of computer.app/Localizations/English.lang",
-		"Applications/Info of computer.app/Localizations/Russian.lang",
-		-- Info of computer
 		{ path="Applications/Finder.app/Main.lua", id=175 },
 		"Applications/Finder.app/Icon.pic",
 		-- Settings
