--- a/Installer/Files.cfg
+++ b/Installer/Files.cfg
@@ -104,23 +104,23 @@
 		"Applications/App Market.app/Localizations/Italian.lang",
 		"Applications/App Market.app/Localizations/Dutch.lang",
 		"Applications/App Market.app/Localizations/Spanish.lang",
-		-- MineCode IDE
-		{ path="Applications/MineCode IDE.app/Main.lua", id=169 },
-		"Applications/MineCode IDE.app/Icon.pic",
-		"Applications/MineCode IDE.app/Extensions/.txt/Icon.pic",
-		"Applications/MineCode IDE.app/Extensions/.cfg/Icon.pic",
-		"Applications/MineCode IDE.app/Extensions/.lang/Icon.pic",
-		"Applications/MineCode IDE.app/Extensions/.lua/Icon.pic",
-		"Applications/MineCode IDE.app/Extensions/.lua/Context menu.lua",
-		"Applications/MineCode IDE.app/Localizations/Chinese.lang",
-		"Applications/MineCode IDE.app/Localizations/Russian.lang",
-		"Applications/MineCode IDE.app/Localizations/English.lang",
-		"Applications/MineCode IDE.app/Localizations/Spanish.lang",
-		"Applications/MineCode IDE.app/Localizations/French.lang",
-		"Applications/MineCode IDE.app/Localizations/Ukrainian.lang",
-		"Applications/MineCode IDE.app/Localizations/German.lang",
-		"Applications/MineCode IDE.app/Localizations/Italian.lang",
-		"Applications/MineCode IDE.app/Localizations/Dutch.lang",
+		-- IMineCode IDE
+		{ path="Applications/IMineCode IDE.app/Main.lua", id=169 },
+		"Applications/IMineCode IDE.app/Icon.pic",
+		"Applications/IMineCode IDE.app/Extensions/.txt/Icon.pic",
+		"Applications/IMineCode IDE.app/Extensions/.cfg/Icon.pic",
+		"Applications/IMineCode IDE.app/Extensions/.lang/Icon.pic",
+		"Applications/IMineCode IDE.app/Extensions/.lua/Icon.pic",
+		"Applications/IMineCode IDE.app/Extensions/.lua/Context menu.lua",
+		"Applications/IMineCode IDE.app/Localizations/Chinese.lang",
+		"Applications/IMineCode IDE.app/Localizations/Russian.lang",
+		"Applications/IMineCode IDE.app/Localizations/English.lang",
+		"Applications/IMineCode IDE.app/Localizations/Spanish.lang",
+		"Applications/IMineCode IDE.app/Localizations/French.lang",
+		"Applications/IMineCode IDE.app/Localizations/Ukrainian.lang",
+		"Applications/IMineCode IDE.app/Localizations/German.lang",
+		"Applications/IMineCode IDE.app/Localizations/Italian.lang",
+		"Applications/IMineCode IDE.app/Localizations/Dutch.lang",
 		-- Picture Edit
 		{ path="Applications/Picture Edit.app/Main.lua", id=798 },
 		"Applications/Picture Edit.app/Icon.pic",
